--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec babel-node src/server.js",
+    "start": "npx nodemon --exec babel-node src/server.js",
     "build":"babel src -d build -copy-files"
   },
   "author": "",
