--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx nodemon --exec babel-node src/server.js",
-    "build":"babel src -d build -copy-files"
+    "build": "babel src -d build --copy-files"
   },
   "author": "",
   "license": "ISC",
